Added db connection config to application.conf.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,3 +46,17 @@ play.filters {
   }
 }
 
+
+## JDBC Datasource
+# https://www.playframework.com/documentation/latest/JavaDatabase
+db {
+  default {
+    driver = org.postgresql.Driver
+    url = "jdbc:postgresql://localhost/crm_db"
+    username = "crm_user"
+    password = "crm_pass"
+    hikaricp {
+      maximumPoolSize = 10
+    }
+  }
+}
