Added Guice Dependency Module to play to manage the dependency injection.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,6 +21,7 @@ play.http {
 # ~~~~~
 # Control which modules are loaded when Play starts.
 play.modules {
+  enabled += "utils.GuiceDependencyModule"
   disabled += "play.core.ObjectMapperModule"
 }
 
