Added Custom Object Mapper for the JSON parsing of the requests.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,7 @@ play.http {
 # Control which modules are loaded when Play starts.
 play.modules {
   enabled += "utils.GuiceDependencyModule"
+  enabled += "utils.CustomJsonObjectMapperModule"
   disabled += "play.core.ObjectMapperModule"
 }
 
