Added CORS Filter and Security Headers Filter.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ play.modules {
 # common logic for all your actions, e.g. adding common headers.
 play.filters {
   # Enabled filters are run automatically against Play.
-  enabled = [play.filters.cors.CORSFilter]
+  enabled += "play.filters.cors.CORSFilter"
+  enabled += "play.filters.headers.SecurityHeadersFilter"
 }
-
 
 ## Filter Configuration
 # https://www.playframework.com/documentation/latest/Filters
