--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,7 @@ db {
   default {
     driver = org.postgresql.Driver
     url = "jdbc:postgresql://localhost/crm_db"
+    schema="crm_schema"
     username = "crm_user"
     password = "crm_pass"
     hikaricp {
@@ -63,3 +64,5 @@ db {
     }
   }
 }
+
+play.evolutions.schema="crm_schema"
