--- a/conf/application-dev.conf
+++ b/conf/application-dev.conf
@@ -9,7 +9,7 @@
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = ${?APPLICATION_SECRET}
 
 
 play.http {
@@ -45,7 +45,10 @@ play.filters {
   # https://www.playframework.com/documentation/latest/CorsFilter
   cors {
     # The allowed origins. If null, all origins are allowed.
-    allowedOrigins = ["http://localhost:4200"]
+    allowedOrigins = null
+
+    # The allowed HTTP methods. If null, all methods are allowed
+    allowedHttpMethods = null
   }
 }
 
