Fixed problem with the database env variables.

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DATABASE_URL=jdbc:postgresql://crm_user:crm_pass@localhost:5432/crm_db
-PLAY_CONFIG=application-local.conf
-PLAY_LOGGER=logback-local.xml
-APPLICATION_SECRET=FoDRDU5AnCn^1U/5ns6`@NdEfu6:;BPWDiMGn9b?f@Xxe0t8/1sfh/o8CE/j8I[l
+JDBC_DATABASE_URL = jdbc:postgresql://localhost:5432/crm_db
+JDBC_DATABASE_USERNAME = crm_user
+JDBC_DATABASE_PASSWORD = crm_pass
+PLAY_CONFIG = application-local.conf
+PLAY_LOGGER = logback-local.xml
+APPLICATION_SECRET = FoDRDU5AnCn^1U/5ns6`@NdEfu6:;BPWDiMGn9b?f@Xxe0t8/1sfh/o8CE/j8I[l
