--- a/conf/application-dev.conf
+++ b/conf/application-dev.conf
@@ -36,6 +36,7 @@ play.filters {
   # Enabled filters are run automatically against Play.
   enabled += "play.filters.cors.CORSFilter"
   enabled += "play.filters.headers.SecurityHeadersFilter"
+  disabled += "play.filters.csrf.CSRFFilter"
 }
 
 ## Filter Configuration
@@ -58,10 +59,9 @@ play.filters {
 db {
   default {
     driver = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost/crm_db"
-    schema="crm_schema"
-    username = "crm_user"
-    password = "crm_pass"
+    url=${?JDBC_DATABASE_URL}
+    username=${?JDBC_DATABASE_USERNAME}
+    password=${?JDBC_DATABASE_PASSWORD}
     hikaricp {
       maximumPoolSize = 10
     }
