--- a/conf/application-local.conf
+++ b/conf/application-local.conf
@@ -58,7 +58,9 @@ play.filters {
 db {
   default {
     driver = org.postgresql.Driver
-    url=${DATABASE_URL}
+    url=${?JDBC_DATABASE_URL}
+    username=${?JDBC_DATABASE_USERNAME}
+    password=${?JDBC_DATABASE_PASSWORD}
     hikaricp {
       maximumPoolSize = 10
     }
