improved the organization of the properties of configuration files.

--- a/conf/application-dev.conf
+++ b/conf/application-dev.conf
@@ -1,71 +1,2 @@
-# This is the main configuration file for the application.
-# https://www.playframework.com/documentation/latest/ConfigFile
-# ~~~~~
-# Play uses HOCON as its configuration file format.
-
-
-## Secret key
-# http://www.playframework.com/documentation/latest/ApplicationSecret
-# ~~~~~
-# The secret key is used to sign Play's session cookie.
-# This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = ${?APPLICATION_SECRET}
-
-
-play.http {
-  errorHandler = utils.CustomErrorHandler
-}
-
-## Modules
-# https://www.playframework.com/documentation/latest/Modules
-# ~~~~~
-# Control which modules are loaded when Play starts.
-play.modules {
-  enabled += "utils.GuiceDependencyModule"
-  enabled += "utils.CustomJsonObjectMapperModule"
-  disabled += "play.core.ObjectMapperModule"
-}
-
-
-## Filters
-# https://www.playframework.com/documentation/latest/JavaHttpFilters
-# ~~~~~
-# Filters run code on every request. They can be used to perform
-# common logic for all your actions, e.g. adding common headers.
-play.filters {
-  # Enabled filters are run automatically against Play.
-  enabled += "play.filters.cors.CORSFilter"
-  enabled += "play.filters.headers.SecurityHeadersFilter"
-  disabled += "play.filters.csrf.CSRFFilter"
-}
-
-## Filter Configuration
-# https://www.playframework.com/documentation/latest/Filters
-play.filters {
-  ## CORS filter configuration
-  # https://www.playframework.com/documentation/latest/CorsFilter
-  cors {
-    # The allowed origins. If null, all origins are allowed.
-    allowedOrigins = null
-
-    # The allowed HTTP methods. If null, all methods are allowed
-    allowedHttpMethods = null
-  }
-}
-
-
-## JDBC Datasource
-# https://www.playframework.com/documentation/latest/JavaDatabase
-db {
-  default {
-    driver = org.postgresql.Driver
-    url=${?JDBC_DATABASE_URL}
-    username=${?JDBC_DATABASE_USERNAME}
-    password=${?JDBC_DATABASE_PASSWORD}
-    hikaricp {
-      maximumPoolSize = 10
-    }
-  }
-}
-
-play.evolutions.schema="crm_schema"
+include "application.conf"
+# This is the specific configuration file for the application on DEV.
