Added to config file, allows connections from anywhere.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,8 +51,10 @@ play.filters {
     # The allowed HTTP methods. If null, all methods are allowed
     allowedHttpMethods = null
   }
+  hosts {
+    allowed = ["."]
+  }
 }
-
 
 ## JDBC Datasource
 # https://www.playframework.com/documentation/latest/JavaDatabase
