Added first steps about api-docs.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,7 @@ play.modules {
   enabled += "utils.GuiceDependencyModule"
   enabled += "utils.CustomJsonObjectMapperModule"
   disabled += "play.core.ObjectMapperModule"
+  enabled += "play.modules.swagger.SwaggerModule"
 }
 
 
@@ -69,3 +70,5 @@ db {
     }
   }
 }
+
+api.version = "v1" // Specify the api version.
